syntax = "proto3";

package persistence_sdk.modules.orders.internal.transactions.cancel;

import "gogoproto/gogo.proto";
import "persistence_sdk/schema/types/base/id.proto";

option go_package = "github.com/persistenceOne/persistenceSDK/modules/orders/internal/transactions/cancel";

service Msg {
  rpc Cancel(Message) returns (TransactionResponse) {};
}

message Message {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;

  string from = 1 [(gogoproto.customtype) = "github.com/persistenceOne/persistenceSDK/schema/types/base.AccAddress", (gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field From missing"'] ;
  persistence_sdk.schema.types.base.ID from_i_d = 2 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field FromID missing"'] ;
  persistence_sdk.schema.types.base.ID order_i_d = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = 'valid:"required~required field OrderID missing"'] ;
}

message TransactionResponse {}
